--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 
-REACT_APP_API_URL = https://your-backend.onrender.com
+REACT_APP_API_URL = https://property-crm-backend.vercel.app
 # REACT_APP_API_URL=http://localhost:5000
